@@ -13,24 +13,44 @@ RobberyReplayMenuPage::RobberyReplayMenuPage()
         : mPickList( 0, 0, true, this ),
           mMenuButton( mainFont, 4, -4, translate( "returnMenu" ) ),
           mReplayButton( mainFont, -4, -4, translate( "startReplay" ) ),
+          mEditHouseButton( mainFont, 4, -4, translate( "returnHome" ) ),
           mReturnToMenu( false ),
-          mStartReplay( false ) {
+          mStartReplay( false ),
+          mStartEditHouse( false ) {
 
     addComponent( &mMenuButton );
     addComponent( &mReplayButton );
+    addComponent( &mEditHouseButton );
+    
     addComponent( &mPickList );
+    
 
     mMenuButton.addActionListener( this );
     mReplayButton.addActionListener( this );
+    mEditHouseButton.addActionListener( this );
 
     mPickList.addActionListener( this );
 
     mReplayButton.setVisible( false );
+    mEditHouseButton.setVisible( false );
     }
 
 
         
 RobberyReplayMenuPage::~RobberyReplayMenuPage() {
+    }
+
+
+
+void RobberyReplayMenuPage::setEditHouseOnDone( char inEdit ) {
+    if( inEdit ) {
+        mEditHouseButton.setVisible( true );
+        mMenuButton.setVisible( false );
+        }
+    else {
+        mEditHouseButton.setVisible( false );
+        mMenuButton.setVisible( true );
+        }
     }
 
 
@@ -43,6 +63,12 @@ char RobberyReplayMenuPage::getReturnToMenu() {
 
 char RobberyReplayMenuPage::getStartReplay() {
     return mStartReplay;
+    }
+
+
+
+char RobberyReplayMenuPage::getStartEditHouse() {
+    return mStartEditHouse;
     }
 
 
@@ -63,6 +89,9 @@ int RobberyReplayMenuPage::getLogID() {
 void RobberyReplayMenuPage::actionPerformed( GUIComponent *inTarget ) {
     if( inTarget == &mMenuButton ) {
         mReturnToMenu = true;
+        }
+    else if( inTarget = &mEditHouseButton ) {
+        mStartEditHouse = true;
         }
     else if( inTarget == &mPickList ) {
         if( mPickList.getSelectedHouse() == NULL ) {
@@ -100,6 +129,7 @@ void RobberyReplayMenuPage::makeActive( char inFresh ) {
     
     mReturnToMenu = false;
     mStartReplay = false;
+    mStartEditHouse = false;
 
     mStatusMessageKey = NULL;
     mStatusError = false;
